# editor1

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile-fedora  Dockerfile-ubuntu  README.md  compile.sh  install_linux_pkgs.sh
editor1/: .gitignore  CMakeLists.txt  editor1.cpp  editor1.h  example_cpp_file.cpp  example_cpp_file.h
ubuntu_dockerfile/: Dockerfile
windows_dockerfile/: Dockerfile
